--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
     <title>Portfolio Gaëlle</title>
   </head>
   <body>
