Maj: Switch / Layout / Header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
     <title>Portfolio Gaëlle</title>
   </head>
-  <body class="dark">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
