--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script> />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com">
+    <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Portfolio Gaëlle</title>
   </head>
