--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script> />
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Portfolio Gaëlle</title>
   </head>
   <body>
