--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="global.scss">
-    <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
+    <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script> />
+    <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preload"href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Portfolio Gaëlle</title>
   </head>
   <body>
