--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preload" href="https://fonts.googleapis.com" crossorigin as="style">
+    <link rel="preload" href="https://fonts.gstatic.com" crossorigin as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" crossorigin>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="global.scss">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Montserrat:wght@400;500;700&display=swap" as="style">
-    <link rel="preload" href="https://fonts.gstatic.com" crossorigin as as="style">
-    <link rel="preload" href="https://fonts.googleapis.com" crossorigin as="style">
     <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
