--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="global.scss">
     <link rel="preload" href="./projects_img/covers/mobile/device_mobile.webp" as="image">
+    <link rel="preload" href="./projects_img/covers/mobile/device_tablette.webp" as="image">
+    <link rel="preload" href="./projects_img/covers/mobile/device_desktop.webp" as="image">
     <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
