--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="global.scss">
-    <link rel="preload" href="./projects_img/covers/mobile/device_mobile.webp" as="image">
-    <link rel="preload" href="./projects_img/covers/mobile/device_tablette.webp" as="image">
-    <link rel="preload" href="./projects_img/covers/mobile/device_desktop.webp" as="image">
+    <link rel="preload" href="./projects_img/covers/mobile/device_mobile.webp" as="image" media="(max-width: 768px)">
+    <link rel="preload" href="./projects_img/covers/tablette/device_tablette.webp" as="image" media="(min-width: 768px) and (max-width: 992px)">
+    <link rel="preload" href="./projects_img/covers/desktop/device_desktop.webp" as="image" media="(min-width: 993spx)">
     <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
