--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preload" href="./projects_img/covers/desktop/device_desktop.webp" as="image" media="(min-width: 993px)">
     <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script async src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
     <title>Portfolio Gaëlle</title>
   </head>
   <body>
