--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="global.scss">
-    <link rel="preload" href="./projects_img/covers/mobile/device_mobile.webp" as="image" media="(max-width: 768px)">
-    <link rel="preload" href="./projects_img/covers/tablette/device_tablette.webp" as="image" media="(min-width: 769px) and (max-width: 992px)">
-    <link rel="preload" href="./projects_img/covers/desktop/device_desktop.webp" as="image" media="(min-width: 993px)">
+
+    <!-- <link rel="preload" href="./projects_img/covers/tablette/device_tablette.webp" as="image" media="(min-width: 769px) and (max-width: 992px)">
+    <link rel="preload" href="./projects_img/covers/desktop/device_desktop.webp" as="image" media="(min-width: 993px)"> -->
     <meta name="description" content="Bienvenue sur mon portfolio me présentant ainsi que les projets sur lesquels j'ai travaillé au cours de ma formation et à titre personnel.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script>
+    <!-- <script defer src="https://kit.fontawesome.com/c3c4f2ccad.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Portfolio Gaëlle</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/index.tsx" async></script>
   </body>
 </html>
